packages/compiler/tests/snapshots/template_parse__w1_a17_string_close_brace_accepted.snap
---
source: packages/compiler/tests/template_parse.rs
expression: result
---
Ok(
    [
        Element {
            tag: "p",
            attrs: [],
            children: [
                Interpolation(
                    "'}'",
                ),
            ],
        },
    ],
)
