packages/compiler/tests/snapshots/template_parse__w1_a20_double_brace_identifier_still_accepted.snap
---
source: packages/compiler/tests/template_parse.rs
expression: result
---
Ok(
    [
        Element {
            tag: "p",
            attrs: [],
            children: [
                Interpolation(
                    "count",
                ),
            ],
        },
    ],
)
