packages/compiler/tests/snapshots/template_parse__w1_b15_attr_string_close_brace_accepted.snap
---
source: packages/compiler/tests/template_parse.rs
expression: result
---
Ok(
    [
        Element {
            tag: "span",
            attrs: [
                Binding {
                    name: "title",
                    expr: "'}'",
                },
            ],
            children: [],
        },
    ],
)
