packages/compiler/tests/snapshots/template_parse__w1_c14_each_list_string_close_brace_accepted.snap
---
source: packages/compiler/tests/template_parse.rs
expression: result
---
Ok(
    [
        Element {
            tag: "li",
            attrs: [
                Macro {
                    name: "each",
                    value: Curly(
                        "it of ['}']",
                    ),
                },
            ],
            children: [
                Text(
                    "x",
                ),
            ],
        },
    ],
)
